--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@strapi/plugin-graphql": "^4.0.6",
     "@strapi/plugin-i18n": "4.0.6",
     "@strapi/plugin-users-permissions": "4.0.6",
+    "@strapi/provider-email-sendgrid": "^4.0.6",
     "@strapi/strapi": "4.0.6",
     "pg": "^8.7.1",
     "pg-connection-string": "^2.4.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "strapi-plugin-passwordless": "^4.0.0"
   },
   "author": {
     "name": "A Strapi developer"
