--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-graphql": "^4.0.6",
-    "@strapi/plugin-i18n": "4.0.6",
-    "@strapi/plugin-users-permissions": "4.0.6",
-    "@strapi/provider-email-sendgrid": "^4.0.6",
-    "@strapi/strapi": "4.0.6",
+    "@strapi/plugin-graphql": "^4.0.7",
+    "@strapi/plugin-i18n": "4.0.7",
+    "@strapi/plugin-users-permissions": "4.0.7",
+    "@strapi/provider-email-sendgrid": "^4.0.7",
+    "@strapi/strapi": "4.0.7",
     "pg": "^8.7.1",
     "pg-connection-string": "^2.4.0",
+    "slugify": "^1.6.5",
     "sqlite3": "^5.0.2",
     "strapi-plugin-passwordless": "^4.0.0"
   },
